# VaultSearch

./: CHANGELOG.md  Cargo.toml  JOURNAL.md  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: package-release.sh
src/: main.rs
tests/: cli_integration.rs
