[package]
name = "vaultsearch"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tantivy = "0.25"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
chrono = { version = "0.4", features = ["clock"] }
html-escape = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"
